--- a/JavaScript/Lecture_1/Labs/2.String,_Date_and_RegExp_Objects/problem_2.3/styles.css
+++ b/JavaScript/Lecture_1/Labs/2.String,_Date_and_RegExp_Objects/problem_2.3/styles.css
@@ -1,3 +1,9 @@
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+}
+
 .red {
   color: red;
 }
@@ -13,6 +19,8 @@
 h1 {
   boder-bottom: 1px solid #000;
   text-transform: capitalize;
+  border-bottom: 1px solid #000;
+  padding-bottom: 1rem;
 }
 
 p {
